# flask-boring-todo

./: LICENSE  README.md  app.py  data.db  pyproject.toml
templates/: index.html  update.html
