[tool.poetry]
name = "flask-boring-todo"
version = "0.1.0"
description = ""
authors = ["Ülgen Sarıkavak <ulgensrkvk@gmail.com>"]
license = "MIT"

[tool.poetry.dev-dependencies]
black = "21.9b0"
ipdb = "0.13.9"
ipython = "7.31.1"

[tool.poetry.dependencies]
python = "3.9.7"
Flask = "2.0.1"
Flask-SQLAlchemy = "2.5.1"
gunicorn = "20.1.0"

[build-system]
requires = ["poetry-core>=1.1.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
